# VisionPlay-AI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt
docs/: architecture.md  phase-0-checklist.md  plugin-development.md  roadmap.md
docs/checklists/: phase-1-checklist.md  phase-2-checklist.md  phase-3-checklist.md
src/visionplay/: __init__.py  __main__.py  app.py
src/visionplay/apps/_template/: __init__.py  manifest.py  plugin.py  processor.py  widget.py
src/visionplay/apps/air_canvas/: __init__.py  manifest.py  plugin.py  processor.py  widget.py
src/visionplay/apps/fruit_ninja/: __init__.py  manifest.py  plugin.py  processor.py  widget.py
src/visionplay/apps/hand_tracking_demo/: __init__.py  manifest.py  plugin.py  processor.py  widget.py
src/visionplay/core/: __init__.py  config.py  event_bus.py  events.py  logging_setup.py  paths.py  plugin_base.py  plugin_registry.py
src/visionplay/ui/: __init__.py  main_window.py
src/visionplay/ui/launcher/: __init__.py  launcher_widget.py
src/visionplay/ui/widgets/: __init__.py  camera_view.py  frame_bridge.py
src/visionplay/vision/: __init__.py
src/visionplay/vision/camera/: __init__.py  camera_source.py  webcam_source.py
src/visionplay/vision/gestures/: __init__.py  detection.py  landmarks.py  smoothing.py  velocity.py
src/visionplay/vision/inference/: __init__.py  backend_base.py  backend_defaults.py  backend_manager.py  device.py  inference_runner.py  mediapipe_backend.py  model_catalog.py  model_registry.py  onnx_backend.py  results.py
src/visionplay/vision/pipeline/: __init__.py  frame_bus.py  frame_types.py
tests/: conftest.py
tests/fixtures/backend_apps_fixture/: __init__.py
tests/fixtures/backend_apps_fixture/results_app/: __init__.py  manifest.py  plugin.py
tests/fixtures/backend_apps_fixture/unavailable_app/: __init__.py  manifest.py  plugin.py
tests/fixtures/onnx/: tiny_identity.onnx  tiny_two_input.onnx
tests/fixtures/plugin_apps_fixture/: __init__.py  _support.py
tests/fixtures/plugin_apps_fixture/_skipped_app/: manifest.py  plugin.py
tests/fixtures/plugin_apps_fixture/failing_frame_app/: manifest.py  plugin.py
tests/fixtures/plugin_apps_fixture/failing_load_app/: manifest.py  plugin.py
tests/fixtures/plugin_apps_fixture/unsupported_api_app/: manifest.py  plugin.py
tests/fixtures/plugin_apps_fixture/valid_app/: manifest.py  plugin.py
tests/integration/: test_inference_pipeline.py
tests/unit/: conftest.py  test_app.py  test_backend_base.py  test_backend_defaults.py  test_backend_manager.py  test_camera_source.py  test_camera_view.py  test_config.py  test_device_config.py  test_event_bus.py  test_frame_bridge.py  test_frame_bus.py  test_frame_pipeline_processor.py  test_frame_types.py  test_gestures_detection.py  test_gestures_landmarks.py  test_gestures_smoothing.py  test_gestures_velocity.py  test_inference_results.py  test_inference_runner.py  test_launcher_widget.py  test_logging_setup.py  test_main_window.py  test_mediapipe_backend.py  test_model_catalog.py  test_model_registry.py  test_onnx_backend.py  test_package.py  test_paths.py  test_plugin_base.py  test_plugin_registry.py  test_webcam_source.py
tests/unit/apps/_template/: test_template_app.py
tests/unit/apps/air_canvas/: _helpers.py  test_air_canvas_m3_3.py  test_air_canvas_processor.py
tests/unit/apps/fruit_ninja/: _fruit_ninja_helpers.py  test_fruit_ninja_processor.py
tests/unit/apps/hand_tracking_demo/: test_hand_tracking_demo.py
